--- a/common/_templates/layout.html
+++ b/common/_templates/layout.html
@@ -2,4 +2,4 @@
 {% extends "!layout.html" %}
 
 {# Custom CSS overrides #}
-{% set bootswatch_css_custom = ['_static/bootstrap-custom.css'] %}
+{% set bootswatch_css_custom = ["_static/bootstrap-custom.css"] %}
