Testing issue on readthedocs

--- a/common/themes/bootstrap/layout.html
+++ b/common/themes/bootstrap/layout.html
@@ -110,6 +110,7 @@
     {% block sidebar2 %} {# possible location for sidebar #} {% endblock %}
   </div>
 </div>
+<p>{{ bootswatch_css_custom }}</p>
 {%- endblock %}
 
 {%- block footer %}
