--- a/common/_templates/layout.html
+++ b/common/_templates/layout.html
@@ -3,3 +3,5 @@
 
 {# Custom CSS overrides #}
 {% set bootswatch_css_custom = ["_static/bootstrap-custom.css"] %}
+
+{%- block footer %}{% endblock %}
