Split "Build an HTML Skin" into smaller files (one per step). Added new screenshots and updated others.

--- a/design/Building Skins/Build an ASCX Skin.html
+++ b/design/Building Skins/Build an ASCX Skin.html
@@ -8,46 +8,32 @@
 
 <h1> Build an ASCX Skin </hi>
 
+<h2> Overview </h2>
+<p>The most basic DNN skin configuration is comprised of one layout template. However, you can also create one CSS file for each layout template or a master CSS file for all layout templates.</p>
+
+<image src="..\..\common\img\SkinTheme.png" alt="Three variations of a skin" width="50%" align=center>
+
+
 <h2> Prerequisites </h2>
 
 <ul>
-<li> A :term:`host` (super user) account to upload skins. </li>
+<li> A super user (host) account. Super user privileges are required to upload skins, because skins can include executables. (An administrator account is sufficient to apply skins and containers to a site.)</li>
 </ul>
 
 
 <h2> Steps </h2>
 
 <ol>
-<li> Log into DNN with a super user (host) account. Super user privileges are required to upload skins, because skins can include executables. (An administrator account is sufficient to apply skins and containers to a site.)</li>
+<li> Create a layout template for the skin in ASCX format.</li> <!-- How is this done? -->
 
-<li> </li>
+<li> (Optional) <a href="Create%20CSS.html">Create a CSS file for each layout template, or create a single master CSS file to be used for all layout templates.</a></li>
 
+<li> <a href="Test%20Skin.html">Test the skin on a webpage.</a></li>
 
+<li> (Optional) <a href="Create%20DocType%20XML.html">Create a doctype XML file.</a></li>
 
+<li> <a href="..\Packaging%20Skins.html">Package your DNN skin.</a></li>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<li> Test the skin on a webpage.
-   <ol type=a>
-   <li>Create a new web page.</li>
-   <li>Edit the page settings and go to <b>Advanced Settings</b>.</li>
-   <li><b>Page Skin</b>: Select <b>Host</b> and choose one of the layout templates from your new skin.</li>
-   <li>Click <b>Update</b>.</li>
-   <li>View your page in a browser to verify that the new skin was applied correctly.
-   </ol>
-</li>
 </ol>
 
 
