--- a/design/Building Skins/Create CSS.html
+++ b/design/Building Skins/Create CSS.html
@@ -12,32 +12,32 @@
 <ol>
 
 <li>Create a CSS file in the same folder as the layout template.</li>
- <!-- How are the layout templates and the CSS files associated with each other? -->
+<!-- How are the layout templates and the CSS files associated with each other? -->
 
-<li>For every section (&lt;div&gt;) that contains a skin object in the layout template, add a style definition in the CSS file. The style definition must start with <b>#</b> followed by the <b>div</b> <b>id</b>.<br>
+<li>For every section (&lt;div&gt;) that contains a theme object in the layout template, add a style definition in the CSS file. The style definition must start with <b>#</b> followed by the <b>div</b> <b>id</b>.<br>
 <b>Example:</b>
-   <table border=1>
-   <tr align=center><th>layout template</th><th>CSS</th></tr>
-   <tr>
-      <td>
-      <xmp>
-   <div id="login_style" class="user">
-      <object id="dnnLOGIN" codebase="LOGIN" codetype="dotnetnuke/server">
-         <param name="CssClass" value="user" />
-      </object>
-   </div>
-      </xmp>
-      </td>
-      <td>
-      <xmp>
-   #login_style .linkseparator{
-       color: white;
-       font-weight: bold;
-   }
-      </xmp>
-      </td>
-   </tr>
-   </table>
+    <table border=1>
+    <tr align=center><th>layout template</th><th>CSS</th></tr>
+    <tr>
+        <td>
+        <xmp>
+    <div id="login_style" class="user">
+        <object id="dnnLOGIN" codebase="LOGIN" codetype="dotnetnuke/server">
+            <param name="CssClass" value="user" />
+        </object>
+    </div>
+        </xmp>
+        </td>
+        <td>
+        <xmp>
+    #login_style .linkseparator{
+         color: white;
+         font-weight: bold;
+    }
+        </xmp>
+        </td>
+    </tr>
+    </table>
 </li>
 
 <li><b>Special case:</b>
@@ -46,7 +46,7 @@
 </ol>
 
 <h2> Example </h2>
-<p>This example illustrates a layout template, its matching CSS file, and a separate <code>menu.css</code>. The layout includes several DNN skin objects:
+<p>This example illustrates a layout template, its matching CSS file, and a separate <code>menu.css</code>. The layout includes several DNN theme objects:
 <ul>
 <li>dnnLOGO</li>
 <li>dnnUSER</li>
@@ -60,321 +60,321 @@
 </p>
 
 <table>
-   <tr align=center bgcolor=silver>
-      <th>MySkin.html<br> (layout template)</th>
-      <th>MySkin.css<br> (based on the "Dreamy" design template from <a href="http://www.oswd.org/">OSWD</a> <!-- QUESTION: Is this true? -->)</th>
-   </tr>
-   <tr valign=top>
-      <td>
-         <xmp>
-   <div id="wrapper">
-       <div id="header">
-         </xmp>
-      </td>
-      <td>
-         <xmp>
-   /* Header Skin Objects */</td>
-   .user, a.user:link, a.user:active, a.user:visited {
-       color: white;
-       font-size: 1.1em;
-       font-weight:bold;
-       text-shadow: 1px 1px 1px #000;
-   }
-   a.user:hover {
-       color: #C00;
-       text-shadow: 2px 2px 2px #fff;
-   }
-         </xmp>
+    <tr align=center bgcolor=silver>
+        <th>MyAwesomeLayout.html<br> (layout template)<br> <a href="../../common/samples/MyAwesomeLayout.html" download>DOWNLOAD</a></th>
+        <th>MyAwesomeLayout.css<br> (based on the "Dreamy" design template from <a href="http://www.oswd.org/">OSWD</a> <!-- QUESTION: Is this true? -->)<br> <a href="../../common/samples/MyAwesomeLayout.css" download>DOWNLOAD</a></th>
+    </tr>
+    <tr valign=top>
+        <td>
+            <xmp>
+    <div id="wrapper">
+         <div id="header">
+            </xmp>
+        </td>
+        <td>
+            <xmp>
+    /* Header Theme Objects */</td>
+    .user, a.user:link, a.user:active, a.user:visited {
+         color: white;
+         font-size: 1.1em;
+         font-weight:bold;
+         text-shadow: 1px 1px 1px #000;
+    }
+    a.user:hover {
+         color: #C00;
+         text-shadow: 2px 2px 2px #fff;
+    }
+            </xmp>
 
-   </tr>
+    </tr>
 
-   <tr valign=top bgcolor=00CCEE>
-      <td>
-         <xmp>
-           <div id="logo">
-               <object id="dnnLOGO" codebase="LOGO" codetype="dotnetnuke/server"></object>
-           </div>
-         </xmp>
-      </td>
-      <td>
-         <xmp>
-   #logo {
-       display: inline-block;
-       margin: 20px 0 0 20px;
-   }
-         </xmp>
-      </td>
-   </tr>
+    <tr valign=top bgcolor=00CCEE>
+        <td>
+            <xmp>
+              <div id="logo">
+                    <object id="dnnLOGO" codebase="LOGO" codetype="dotnetnuke/server"></object>
+              </div>
+            </xmp>
+        </td>
+        <td>
+            <xmp>
+    #logo {
+         display: inline-block;
+         margin: 20px 0 0 20px;
+    }
+            </xmp>
+        </td>
+    </tr>
 
-   <tr valign=top bgcolor=00CCEE>
-      <td>
-         <xmp>
-           <div id="login_style" class="user">
-               <object id="dnnUSER" codebase="USER" codetype="dotnetnuke/server">
-                   <param name="CssClass" value="user" />
-               </object>
-               <span class="linkseparator">|</span>
-               <object id="dnnLOGIN" codebase="LOGIN" codetype="dotnetnuke/server">
-                   <param name="CssClass" value="user" />
-               </object>
-           </div>
-         </xmp>
-      </td>
-      <td>
-         <xmp>
-   #login_style {
-       position: absolute;
-       bottom: 10px;
-       right: 10px;
-   }
-   .linkseparator {
-       padding: 0 5px;
-   }
-   #login_style .linkseparator{
-       color: white;
-       font-weight: bold;
-   }
-         </xmp>
-      </td>
-   </tr>
+    <tr valign=top bgcolor=00CCEE>
+        <td>
+            <xmp>
+              <div id="login_style" class="user">
+                    <object id="dnnUSER" codebase="USER" codetype="dotnetnuke/server">
+                         <param name="CssClass" value="user" />
+                    </object>
+                    <span class="linkseparator">|</span>
+                    <object id="dnnLOGIN" codebase="LOGIN" codetype="dotnetnuke/server">
+                         <param name="CssClass" value="user" />
+                    </object>
+              </div>
+            </xmp>
+        </td>
+        <td>
+            <xmp>
+    #login_style {
+         position: absolute;
+         bottom: 10px;
+         right: 10px;
+    }
+    .linkseparator {
+         padding: 0 5px;
+    }
+    #login_style .linkseparator{
+         color: white;
+         font-weight: bold;
+    }
+            </xmp>
+        </td>
+    </tr>
 
-   <tr>
-      <td>
-         <xmp>
-       </div>
-         </xmp>
-      </td>
-      <td></td>
-   </tr>
+    <tr>
+        <td>
+            <xmp>
+         </div>
+            </xmp>
+        </td>
+        <td></td>
+    </tr>
 
-   <tr valign=top bgcolor=00CCEE>
-      <td>
-         <xmp>
-       <div id="menu">
-           <object id="dnnNAV" codebase="NAV" codetype="dotnetnuke/server">
-               <param name="ProviderName" value="DDRMenuNavigationProvider" />
-               <param name="IndicateChildren" value="false" />
-               <param name="ControlOrientation" value="Horizontal" />
-               <param name="CSSControl" value="mainMenu" />
-           </object>
-       </div>
-         </xmp>
-      </td>
-      <td>
-         <xmp>
-   /* See the separate menu.css, which you can also import as follows:
-    @import url("mneu.css");
-   */
-          </xmp>
-       </td>
-   </tr>
+    <tr valign=top bgcolor=00CCEE>
+        <td>
+            <xmp>
+         <div id="menu">
+              <object id="dnnNAV" codebase="NAV" codetype="dotnetnuke/server">
+                    <param name="ProviderName" value="DDRMenuNavigationProvider" />
+                    <param name="IndicateChildren" value="false" />
+                    <param name="ControlOrientation" value="Horizontal" />
+                    <param name="CSSControl" value="mainMenu" />
+              </object>
+         </div>
+            </xmp>
+        </td>
+        <td>
+            <xmp>
+    /* See the separate MyAwesomeMenu.css, which you can also import as follows:
+     @import url("mneu.css");
+    */
+             </xmp>
+         </td>
+    </tr>
 
-   <tr>
-      <td>
-         <xmp>
-       <div id="sidebar">
-           <div id="feed"><a class="feed-button" href="#">&nbsp;</a> </div>
-           <div id="SidebarPane" runat="server" class="SidebarPane"></div>
-           <div id="sidebar-bottom">&nbsp;</div>
-       </div>
-       <div id="content">
-           <div id="BannerPane" runat="server" class="BannerPane"></div>
-           <div id="ContentPane" runat="server"></div>
-       </div>
-       <div id="footer">
-         </xmp>
-      </td>
-      <td></td>
-   </tr>
+    <tr>
+        <td>
+            <xmp>
+         <div id="sidebar">
+              <div id="feed"><a class="feed-button" href="#">&nbsp;</a> </div>
+              <div id="SidebarPane" runat="server" class="SidebarPane"></div>
+              <div id="sidebar-bottom">&nbsp;</div>
+         </div>
+         <div id="content">
+              <div id="BannerPane" runat="server" class="BannerPane"></div>
+              <div id="ContentPane" runat="server"></div>
+         </div>
+         <div id="footer">
+            </xmp>
+        </td>
+        <td></td>
+    </tr>
 
-   <tr valign=top bgcolor=00CCEE>
-      <td>
-         <xmp>
-           <div class="linkscontainer">
-               <object id="dnnLINKS" codebase="LINKS" codetype="dotnetnuke/server">
-                   <param name="CssClass" value="links" />
-                   <param name="Level" value="Root" />
-                   <param name="Separator" value="&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;" />
-               </object>
-           </div>
-         </xmp>
-      </td>
-      <td>
-         <xmp>
-   /* Footer Skin Objects */
-   .linkscontainer {
-       padding-top: 30px;
-       text-align: center;
-       font-size: 1.2em;
-       text-transform: uppercase;
-   }
-   .links, a.links:link, a.links:active, a.links:visited {
-       font-weight: bold;
-       color: #28879B;
-   }
-   a.links:hover {
-       color: #C00;
-   }
-         </xmp>
-      </td>
-   </tr>
+    <tr valign=top bgcolor=00CCEE>
+        <td>
+            <xmp>
+              <div class="linkscontainer">
+                    <object id="dnnLINKS" codebase="LINKS" codetype="dotnetnuke/server">
+                         <param name="CssClass" value="links" />
+                         <param name="Level" value="Root" />
+                         <param name="Separator" value="&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;" />
+                    </object>
+              </div>
+            </xmp>
+        </td>
+        <td>
+            <xmp>
+    /* Footer Theme Objects */
+    .linkscontainer {
+         padding-top: 30px;
+         text-align: center;
+         font-size: 1.2em;
+         text-transform: uppercase;
+    }
+    .links, a.links:link, a.links:active, a.links:visited {
+         font-weight: bold;
+         color: #28879B;
+    }
+    a.links:hover {
+         color: #C00;
+    }
+            </xmp>
+        </td>
+    </tr>
 
-   <tr valign=top bgcolor=00CCEE>
-      <td>
-         <xmp>
-           <div id="terms_style" class="footer">
-               <object id="dnnPRIVACY" codetype="dotnetnuke/server" codebase="PRIVACY">
-                   <param name="CssClass" value="footer" />
-               </object>
-               <span class="linkseparator">|</span>
-               <object id="dnnTERMS" codetype="dotnetnuke/server" codebase="TERMS">
-                   <param name="CssClass" value="footer" />
-               </object>
-           </div>
-         </xmp>
-      </td>
-      <td>
-         <xmp>
-   #terms_style{
-       position: absolute;
-       bottom: 10px;
-       left: 10px;
-       display:inline-block;
-   }
-         </xmp>
-      </td>
-   </tr>
+    <tr valign=top bgcolor=00CCEE>
+        <td>
+            <xmp>
+              <div id="terms_style" class="footer">
+                    <object id="dnnPRIVACY" codetype="dotnetnuke/server" codebase="PRIVACY">
+                         <param name="CssClass" value="footer" />
+                    </object>
+                    <span class="linkseparator">|</span>
+                    <object id="dnnTERMS" codetype="dotnetnuke/server" codebase="TERMS">
+                         <param name="CssClass" value="footer" />
+                    </object>
+              </div>
+            </xmp>
+        </td>
+        <td>
+            <xmp>
+    #terms_style{
+         position: absolute;
+         bottom: 10px;
+         left: 10px;
+         display:inline-block;
+    }
+            </xmp>
+        </td>
+    </tr>
 
-   <tr valign=top bgcolor=00CCEE>
-      <td>
-         <xmp>
-           <div id="copy_style" class="footer">
-               <object id="dnnCOPYRIGHT" codetype="dotnetnuke/server" codebase="COPYRIGHT">
-                   <param name="CssClass" value="footer" />
-               </object>
-           </div>
-         </xmp>
-      </td>
-      <td>
-         <xmp>
-   #copy_style{
-       position: absolute;
-       bottom: 10px;
-       right: 10px;
-       display:inline-block;
-   }
-         </xmp>
-      </td>
-   </tr>
+    <tr valign=top bgcolor=00CCEE>
+        <td>
+            <xmp>
+              <div id="copy_style" class="footer">
+                    <object id="dnnCOPYRIGHT" codetype="dotnetnuke/server" codebase="COPYRIGHT">
+                         <param name="CssClass" value="footer" />
+                    </object>
+              </div>
+            </xmp>
+        </td>
+        <td>
+            <xmp>
+    #copy_style{
+         position: absolute;
+         bottom: 10px;
+         right: 10px;
+         display:inline-block;
+    }
+            </xmp>
+        </td>
+    </tr>
 
-   <tr>
-      <td>
-         <xmp>
-       </div>
-   </div>
-         </xmp>
-      </td>
-      <td></td>
-   </tr>
+    <tr>
+        <td>
+            <xmp>
+         </div>
+    </div>
+            </xmp>
+        </td>
+        <td></td>
+    </tr>
 </table>
 
 <table>
-   <tr bgcolor=silver>
-      <th>menu.css<br> (based on DNN's <b>MinimalExtropy</b> skin) <!-- QUESTION: Is this true? --></th>
-   </tr>
-   <tr bgcolor=00CCEE>
-      <td>
-         <xmp>
-   /*--------- dnn menu style ----------*/
-   /* main menu td */
-   .mainMenu {
-       cursor: pointer;
-       font-size: 11px;
-       background-color: transparent;
-       width: 700px;
-   }
-   /* Main Menu Normal */
-   .mainMenu .root {
-       color: white;
-       font-size: 13px;
-       font-weight: bold;
-       text-align: center;
-       padding: 0px 12px;
-       text-transform: uppercase;
-       margin-right: 1px;
-       white-space: nowrap;
-       margin-right: 1px;
-       float: left;
-   }
-   /* Main menu hover */
-   .mainMenu .hov {
-       color: #fff;
-       background: url("images/bg-menu-hover.png") repeat-x top left;
-   }
-   /* Main menu selected */
-   .mainMenu .sel, .mainMenu .bc {
-       color: #bce5eb;
-   }
-   .mainMenu table {
-       border: 1px solid #C0D6E5;
-       z-index: 5000;
-   }
-   /* SUB Menu Normal */
-   .mainMenu tr.mi {
-       background-color: #F8FAFF;
-       z-index: 1000;
-       font-size: 11px;
-       font-weight: bold;
-       text-align: left;
-       color: #375162;
-       line-height: 2em;
-       text-transform: none;
-   }
-   .mainMenu tr.mi td {
-       padding: 0 2px;
-       text-transform: none;
-   }
-   /* SUB Menu hover & selected */
-   .mainMenu tr.hov {
-       background: #CE0D0D url("images/submenu_hover.png") repeat-x top left;
-   }
-   .mainMenu tr.hov td {
-       color: #fff;
-   }
-   .mainMenu tr.sel, .mainMenu tr.bc {
-       background: #CE0D0D url("/images/submenu_active.png") repeat-x top left;
-   }
-   .mainMenu tr.sel td, .mainMenu tr.bc td {
-       color: #fff;
-   }
-   .main_dnnmenu_break {
-       height: 2px;
-       background-color: #D5E0FF;
-   }
-   /* Module Action Menus */
-   .ModuleTitle_SubMenu {
-       border: 1px solid #C0D6E5;
-   }
-   .ModuleTitle_SubMenu td {
-       background-color: #F8FAFF;
-       white-space: nowrap;
-   }
-   .ModuleTitle_MenuIcon {
-       background-color: #F8FAFF;
-       border: none;
-       padding: 0px 2px;
-   }
-   .ModuleTitle_MenuItemSel td, .ModuleTitle_MenuItemSel .ModuleTitle_MenuIcon {
-       background: #CE0D0D url("images/submenu_hover.png") repeat-x top left;
-       color: #fff;
-   }
-   .ModuleTitle_MenuBreak td, .ModuleTitle_MenuBreak .ModuleTitle_MenuIcon {
-       height: 2px;
-       background-color: #D5E0FF;
-   }
-         </xmp>
-      </td>
-   </tr>
+    <tr bgcolor=silver>
+        <th>MyAwesomeMenu.css<br> (based on DNN's <b>MinimalExtropy</b> theme) <!-- QUESTION: Is this true? --> <br> <a href="../../common/samples/MyAwesomeMenu.css" download>DOWNLOAD</a></th>
+    </tr>
+    <tr bgcolor=00CCEE>
+        <td>
+            <xmp>
+    /*--------- dnn menu style ----------*/
+    /* main menu td */
+    .mainMenu {
+         cursor: pointer;
+         font-size: 11px;
+         background-color: transparent;
+         width: 700px;
+    }
+    /* Main Menu Normal */
+    .mainMenu .root {
+         color: white;
+         font-size: 13px;
+         font-weight: bold;
+         text-align: center;
+         padding: 0px 12px;
+         text-transform: uppercase;
+         margin-right: 1px;
+         white-space: nowrap;
+         margin-right: 1px;
+         float: left;
+    }
+    /* Main menu hover */
+    .mainMenu .hov {
+         color: #fff;
+         background: url("images/bg-menu-hover.png") repeat-x top left;
+    }
+    /* Main menu selected */
+    .mainMenu .sel, .mainMenu .bc {
+         color: #bce5eb;
+    }
+    .mainMenu table {
+         border: 1px solid #C0D6E5;
+         z-index: 5000;
+    }
+    /* SUB Menu Normal */
+    .mainMenu tr.mi {
+         background-color: #F8FAFF;
+         z-index: 1000;
+         font-size: 11px;
+         font-weight: bold;
+         text-align: left;
+         color: #375162;
+         line-height: 2em;
+         text-transform: none;
+    }
+    .mainMenu tr.mi td {
+         padding: 0 2px;
+         text-transform: none;
+    }
+    /* SUB Menu hover & selected */
+    .mainMenu tr.hov {
+         background: #CE0D0D url("images/submenu_hover.png") repeat-x top left;
+    }
+    .mainMenu tr.hov td {
+         color: #fff;
+    }
+    .mainMenu tr.sel, .mainMenu tr.bc {
+         background: #CE0D0D url("/images/submenu_active.png") repeat-x top left;
+    }
+    .mainMenu tr.sel td, .mainMenu tr.bc td {
+         color: #fff;
+    }
+    .main_dnnmenu_break {
+         height: 2px;
+         background-color: #D5E0FF;
+    }
+    /* Module Action Menus */
+    .ModuleTitle_SubMenu {
+         border: 1px solid #C0D6E5;
+    }
+    .ModuleTitle_SubMenu td {
+         background-color: #F8FAFF;
+         white-space: nowrap;
+    }
+    .ModuleTitle_MenuIcon {
+         background-color: #F8FAFF;
+         border: none;
+         padding: 0px 2px;
+    }
+    .ModuleTitle_MenuItemSel td, .ModuleTitle_MenuItemSel .ModuleTitle_MenuIcon {
+         background: #CE0D0D url("images/submenu_hover.png") repeat-x top left;
+         color: #fff;
+    }
+    .ModuleTitle_MenuBreak td, .ModuleTitle_MenuBreak .ModuleTitle_MenuIcon {
+         height: 2px;
+         background-color: #D5E0FF;
+    }
+            </xmp>
+        </td>
+    </tr>
 </table>
 
 
