--- a/design/Building Skins/Create DocType XML.html
+++ b/design/Building Skins/Create DocType XML.html
@@ -12,26 +12,44 @@
 <h2> Prerequisites </h2>
 
 <ul>
-<li> A super user (host) account. Super user privileges are required to upload skins, because skins can include executables. The super user also converts the skin from HTML to ASCX. (An administrator account is sufficient to apply skins and containers to a site.)</li>
+<li> A super user (host) account. Super user privileges are required to upload themes, because themes can include executables. The super user also converts the theme from HTML to ASCX. (An administrator account is sufficient to apply themes and containers to a site.)</li>
 </ul>
 
 
 <h2> Overview </h2>
-If a page is not rendering properly in some browsers, you can force the skin to be rendered in <b>XHTML 1.0 Transitional</b> by creating a doctype XML file.
+If a page is not rendering properly in some browsers, you can force the theme to be rendered in <b>XHTML</b> or <b>HTML5</b> by creating a doctype XML file.
 
 <h2> Steps </h2>
 <ol type=a>
 
 <li>Create a doctype XML file with the same name as your layout template file, followed by <b>.doctype.xml</b>.<br>
-    <b>Example:</b> If your layout template file is called <b>MyLayout.html</b>, give your doctype file the name <b>MyLayout.doctype.xml</b>.
+     <b>Example:</b> If your layout template file is called <b>MyAwesomeLayout.html</b>, give your doctype file the name <b>MyAwesomeLayout.doctype.xml</b>.
 </li>
 
-<li>Enter the following in your doctype file:
-   <xmp>
-   <SkinDocType>
-      <![CDATA[<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">]]>
-   </SkinDocType>
-   </xmp>
+<li>Enter one of the following in your doctype file:
+    <ul>
+    <li>XHTML Strict
+        <xmp>
+    <SkinDocType>
+        <![CDATA[<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">]]>
+    </SkinDocType>
+        </xmp>
+    </li>
+    <li>XHTML Transitional
+        <xmp>
+    <SkinDocType>
+        <![CDATA[<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">]]>
+    </SkinDocType>
+        </xmp>
+    </li>
+    <li>HTML5
+        <xmp>
+    <SkinDocType>
+        <![CDATA[<!DOCTYPE html>]]>
+    </SkinDocType>
+        </xmp>
+    </li>
+    </ul>
 </li>
 
 </ol>
