--- a/design/Building Themes/Create Layout Template - HTML.html
+++ b/design/Building Themes/Create Layout Template - HTML.html
@@ -12,7 +12,7 @@
 <h2> Prerequisites </h2>
 
 <ul>
-<li> A super user (host) account. Super user privileges are required to upload themes, because themes can include executables. The super user also converts the theme from HTML to ASCX. (An administrator account is sufficient to apply themes and containers to a site.)</li>
+    <li><OBJECT data="CONREF-Prereq-Host.html"></OBJECT></li>
 </ul>
 
 
