Added more info in PaneLayout diagram. Tweaks.

--- a/design/Building Themes.html
+++ b/design/Building Themes.html
@@ -6,7 +6,7 @@
 
 <!-- .. include:: /../common/stub-topic.txt -->
 
-<h1> Building Theme </hi>
+<h1> Building Themes </hi>
 
 
 <h2> Overview </h2>
@@ -23,13 +23,13 @@
 
 <p>A layout defines where panes are located on the web page and what each pane contains.</p>
 
-<image src="..\common\img\PaneLayout.png" alt="Pane in a layout" align=left>
+<image src="..\common\img\PaneLayout.png" alt="Pane in a layout" width="50%" align=left>
 
 <p>A <b>pane</b> is a section of a web page that displays static content, dynamic content, or a standard theme object. DNN requires exactly one content pane called `ContentPane` (case-insensitive). Additional panes are optional.</p>
 
 <p>A <b>theme object</b> can be a typical component of a webpage, such as the menu bar, the copyright notice, the login/registration links, the privacy link, the terms of service link, and the search box.</p>
 
-<p>Dynamic content can be generated using a <b>module</b> and then displayed according to the definition of the module's <b>container</b>.</p>
+<p>Dynamic content can be generated using a <b>module</b> and then formatted according to the definition of the module's <b>container</b>.</p>
 
 <p>The layout templates included in the skin are variations on a theme that the web designer can choose from for each page in the site, such as the home page, a gallery of photos, or a listing of products for sale.</p>
 
@@ -43,30 +43,30 @@
 <p>DNN supports two different types of themes: HTML and ASCX.</p>
 
 <table border=1 width=75%>
-    <tr><th>HTML</th><th>ASCX</th></tr>
-    <tr>
+    <tr align=center><th width=50%>HTML</th><th width=50%>ASCX</th></tr>
+    <tr align=center>
         <td>Basic theme.</td>
         <td>Advanced theme.</td>
     </tr>
-    <tr>
+    <tr align=center>
         <td>Can be created using any HTML editor.</td>
         <td>Requires <a href="http://www.visualstudio.com/">Microsoft Visual Studio</a>.</td>
     </tr>
-    <tr>
+    <tr align=center>
         <td>Automatically converted to ASCX when installed. Only the <code>&lt;innerHtml&gt;</code> portion of the <code>&lt;body&gt;</code> tag is retained; everything else is discarded, including the entire <code>&lt;header&gt;</code>.</td>
         <td>Used as is.</td>
     </tr>
  </table>
 
 
-<h2> Steps </h2>
+<h2> How to Build a Theme </h2>
 
 <table border=1 width=75%>
-    <tr align=center><th></th><th>HTML</th><th>ASCX</th></tr>
+    <tr align=center><th></th><th width=45%>HTML</th><th width=45%>ASCX</th></tr>
     <tr align=center>
         <td rowspan=2>1</td>
         <td>
-            <a href="Building%20Themes/Create%20Layout%20Template%20-%20HTML.html">Create a layout template for the theme in HTML format.</a><br>
+            a. <a href="Building%20Themes/Create%20Layout%20Template%20-%20HTML.html">Create a layout template for the theme in HTML format.</a><br>
         </td>
         <td rowspan=2>
             Create a layout template in ASCX format. <!-- How? -->
@@ -74,7 +74,7 @@
     </tr>
     <tr align=center>
         <td>
-            <a href="Building%20Themes/Convert%20Layout%20Template.html">Convert the layout template from HTML to ASCX.</a>
+            b. <a href="Building%20Themes/Convert%20Layout%20Template.html">Convert the layout template from HTML to ASCX.</a>
         </td>
     </tr>
     <tr align=center>
