--- a/design/Building Themes/Create DocType XML.html
+++ b/design/Building Themes/Create DocType XML.html
@@ -12,7 +12,7 @@
 <h2> Prerequisites </h2>
 
 <ul>
-    <li><OBJECT data="CONREF-Prereq-Host.html"></OBJECT></li>
+    <li><object width="100%" data="..\..\common\bptext\BP-PrereqHost.html"></object></li>
 </ul>
 
 
