--- a/design/Building Themes/Convert Layout Template.html
+++ b/design/Building Themes/Convert Layout Template.html
@@ -12,14 +12,14 @@
 <h2> Prerequisites </h2>
 
 <ul>
-    <li><OBJECT data="CONREF-Prereq-Host.html"></OBJECT></li>
+    <li><object width="100%" data="..\..\common\bptext\BP-PrereqHost.html"></object></li>
 </ul>
 
 
 <h2> Steps </h2>
 <ol>
 
-<li>In the DNN administration page<!-- Needs confirmation -->, go to <b>Admin</b> &gt; (double-gear tab) &gt; <b>Themes</b>.<br>
+<li>While logged in as an admin or host, go to <b>Admin</b> &gt; (double-gear tab) &gt; <b>Themes</b>.<br>
     <img src="..\..\common\img\scr-AdminThemes.png">
 </li>
 
