--- a/design/Building Themes/Create Layout Template - HTML.html
+++ b/design/Building Themes/Create Layout Template - HTML.html
@@ -12,28 +12,20 @@
 <h2> Prerequisites </h2>
 
 <ul>
-    <li><OBJECT data="CONREF-Prereq-Host.html"></OBJECT></li>
+    <li><object width="100%" data="..\..\common\bptext\BP-PrereqHost.html"></object></li>
 </ul>
 
 
 <h2> Steps </h2>
 <ol>
 
-<li> In your DNN installation, go to <b>Host</b> &gt; <b>File Management</b>.<br>
-    <image src="../../common/img/scr-Host-FileMgmt.png" width=75%>
-</li>
-
-<li> In your DNN installation, create a new folder for your theme under <b>Themes\_default</b>. The new folder name becomes the name of the DNN theme.</li>
-    <image src="../../common/img/scr-SkinsDefaultCreateFolder.png" width=55%><br>
-    <image src="../../common/img/scr-CreateNewFolder.png" width=55% valign=center>
-
-<li> Create a new layout template file called <b>index.html</b>. <!-- QUESTION: Does it *have* to be named "index.html"? -->
+<li> Create a new HTML file for the layout template.
     <p><b>Note:</b>
         <ul>
-            <li>The layout template must contain at least one pane.</li>
+            <li>The layout template must contain at least one pane. </li>
             <li>Exactly one of the panes must be called <b>ContentPane</b>.</li>
             <li>All panes must be defined as a server control by adding <b>runat="server"</b> to the element.</li>
-            <li>DNN recognizes only the folowing HTML elements as valid panes: &lt;td&gt; (table cells), &lt;div&gt;, &lt;span&gt;, and &lt;p&gt;.
+            <li>DNN recognizes only the folowing HTML elements as valid panes: &lt;td&gt; (table cells), &lt;div&gt;, &lt;p&gt;, and &lt;span&gt;.
         </ul>
     </p>
     <p><b>Example:</b> A very basic layout template.
@@ -65,7 +57,10 @@
     <p><b>Tip:</b> Add a class attribute to each of the pane controls, because ASP.NET will modify the control names when the page is rendered.</p> <!-- Not sure what this means. Is this still true? -->
 </li>
 
-<li> (Optional) Add theme objects to your layout template for a more dynamic page. A default DNN installation includes the following theme objects:
+<li> (Optional) Add theme objects to your layout template for a more dynamic page.
+    <p><object width="100%" data="../../common/bptext/BP-AddThemeObjects.html"></object></p>
+
+    <p>A default DNN installation includes the following theme objects:</p>
     <table width=100%>
     <tr>
         <td valign=top>
@@ -99,28 +94,7 @@
         </td>
     </tr>
     </table>
-    <p><b>Tip:</b> <a href="http://www.10poundgorilla.com/">10 Pound Gorilla</a>'s <i><a href="http://www.10poundgorilla.com/DNN/Skinning-Tool">Skinning Tool</a></i> is both a reference and a tool that customizes the code for DNN theme objects, based on the attribute values you specify.</p>
-    <!-- "REF Theme Objects.html" 10 Pound Gorilla has a great tool that creates the correct code if you provide the attribute values. I don't think we can do any better than that. -->
-    <p>You can add these theme objects using the HTML <b>object</b> and <b>param</b> tags. In the <b>object</b> tag,
-    <ul>
-    <li>The <b>codebase</b> attribute specifies the theme object to be rendered.</li>
-    <li>The <b>codetype</b> attribute must be <code>dotnetnuke/server</code> for all theme objects.</li>
-    </ul>
-    </p>
-    <p><b>Example:</b> To add the <b>dnnLOGIN</b> theme object,
-        <xmp>
-        <div id="login_style" class="user">
-            <object id="dnnLOGIN" codebase="LOGIN" codetype="dotnetnuke/server">
-                <param name="CssClass" value="user"/>
-            </object>
-        </div>
-        </xmp>
-    </p>
-</li>
-
-<li>Upload <b>index.html</b> to the new DNN theme folder.<br>
-    <image src="../../common/img/scr-UploadLayoutTemplate.png" width=55%><br>
-    <image src="../../common/img/scr-UploadFiles.png" width=75%>
+    <p><object width="100%" data="../../common/bptext/BP-TipSkinningTool.html"></object></p>
 </li>
 
 </ol>
