--- a/design/Building Themes/Test Theme.html
+++ b/design/Building Themes/Test Theme.html
@@ -12,14 +12,14 @@
 <h2> Prerequisites </h2>
 
 <ul>
-    <li><OBJECT data="CONREF-Prereq-Host.html"></OBJECT></li>
+    <li><object width="100%" data="..\..\common\bptext\BP-PrereqHost.html"></object></li>
 </ul>
 
 
 <h2> Steps </h2>
 <ol>
 
-<li>Create a new web page.</li>
+<li>While logged in as an admin or host, create a new web page.</li>
 
 <li>Edit the page settings and go to <b>Advanced Settings</b>.</li>
 
