* Converted Glossary.rst to Glossary.html. * Tweaks.

--- a/design/Building Themes/Create CSS.html
+++ b/design/Building Themes/Create CSS.html
@@ -51,14 +51,14 @@
 <h2> Example </h2>
 <p>This example illustrates a layout template, its matching CSS file, and a separate <code>menu.css</code>. The layout includes several DNN theme objects:
 <ul>
-<li>dnnLOGO</li>
-<li>dnnUSER</li>
-<li>dnnLOGIN</li>
-<li>dnnNAV</li>
-<li>dnnLINKS</li>
-<li>dnnPRIVACY</li>
-<li>dnnTERMS</li>
-<li>dnnCOPYRIGHT</li>
+<li>LOGO</li>
+<li>USER</li>
+<li>LOGIN</li>
+<li>NAV</li>
+<li>LINKS</li>
+<li>PRIVACY</li>
+<li>TERMS</li>
+<li>COPYRIGHT</li>
 </ul>
 </p>
 
