--- a/design/Building Themes/Test Theme.html
+++ b/design/Building Themes/Test Theme.html
@@ -6,7 +6,7 @@
 
 <!-- .. include:: /../common/stub-topic.txt -->
 
-<h1> Test the Theme on a Web Page </hi>
+<h1> Test the Theme on a Webpage </hi>
 
 
 <h2> Prerequisites </h2>
@@ -19,13 +19,11 @@
 <h2> Steps </h2>
 <ol>
 
-<li>While logged in as an admin or host, create a new web page.</li>
+<li>While logged in as an admin or host, create a new webpage.</li>
 
 <li>Edit the page settings and go to <b>Advanced Settings</b>.</li>
 
-<li>In the <b>Page Theme</b> section, select <b>Host</b> and choose one of the layout templates from your new theme.<br>
-    <b>Note:</b> When a layout template is added to the page, the associated CSS file is automatically added.
-</li>
+<li>In the <b>Page Theme</b> section, select <b>Host</b> and choose one of the layout templates from your new theme.</li>
 
 <li>Click <b>Update</b>.</li>
 
