--- a/design/Building Themes/Create Layout Template.html
+++ b/design/Building Themes/Create Layout Template.html
@@ -6,29 +6,29 @@
 
 <!-- .. include:: /../common/stub-topic.txt -->
 
-<h1> Create a Layout Template in HTML Format </hi>
+<h1> Create a Layout Template </hi>
 
 
 <h2> Steps </h2>
 <ol>
 
-<li> Create a new HTML file for the layout template.
+<li> Create a new file for the layout template.
     <p><b>Note:</b>
         <ul>
-            <li>The layout template must contain at least one pane. </li>
+            <li>The layout template must contain at least one pane.</li>
             <li>Exactly one of the panes must be called <b>ContentPane</b>.</li>
             <li>All panes must be defined as a server control by adding <b>runat="server"</b> to the element.</li>
             <li>DNN recognizes only the folowing HTML elements as valid panes: &lt;td&gt; (table cells), &lt;div&gt;, &lt;p&gt;, and &lt;span&gt;.
         </ul>
     </p>
-    <p><b>Example:</b> A very basic layout template.
+    <p><b>Example:</b> A very basic layout template. <!-- Is this the same for ASCX? -->
         <xmp>
             <div id="wrapper">
                  <div id="ContentPane" runat="server"></div>
             </div>
         </xmp>
     </p>
-    <p><b>Example:</b> A layout template with several panes, a header, and a footer.
+    <p><b>Example:</b> A layout template with several panes, a header, and a footer. <!-- Is this the same for ASCX? -->
         <xmp>
             <div id="wrapper">
                  <div id="header"></div>
@@ -50,8 +50,65 @@
     <p><b>Tip:</b> Add a class attribute to each of the pane controls, because ASP.NET will modify the control names when the page is rendered.</p> <!-- Not sure what this means. Is this still true? -->
 </li>
 
-<li> (Optional) Add theme objects to your layout template for a more dynamic page.
-    <p><object width="100%" data="../../common/bptext/BP-AddThemeObjects.html"></object></p>
+<li> (Optional) Add theme objects to any pane for a more dynamic page.
+
+    <table width=100% border=1>
+    <tr align=center><th width=50%>HTML</th><th width=50%>ASCX</th></tr>
+    <tr valign=top>
+        <td>
+            <p>You can use the HTML token.<p>
+            <p><b>Example:</b> <!-- Is this correct? -->
+                <xmp>
+    <div id="login_style" class="user">
+        [LOGIN]
+    </div>
+                </xmp>
+            </p>
+        </td>
+        <td>
+            <p>You can use the ASCX token.</p>
+            <p><b>Example:</b> <!-- Is this correct? -->
+                <xmp>
+    <div id="login_style" class="user">
+        <dnn:Login runat="server" id="dnnLogin" CssClass="user" />
+    </div>
+                </xmp>
+            </p>
+        </td>
+    </tr>
+
+    <tr valign=top>
+        <td>You can use the HTML <b>object</b> and <b>param</b> tags.
+        <!-- When do you use this and when do you use "[LOGIN]"? -->
+            <p><b>Note:</b> In the <b>object</b> tag,
+                <ul>
+                    <li>The <b>codebase</b> attribute specifies the theme object to be rendered.</li>
+                    <li>The <b>codetype</b> attribute must be <code>dotnetnuke/server</code> for all theme objects.</li>
+                </ul>
+            </p>
+            <p><b>Example:</b>
+                <xmp>
+    <div id="login_style" class="user">
+        <object id="dnnLOGIN" codebase="LOGIN" codetype="dotnetnuke/server">
+            <param name="CssClass" value="user"/>
+        </object>
+    </div>
+                </xmp>
+            </p>
+        </td>
+        <td>
+            <p>You can use the Register.</p> <!-- Is this what it's called? When do you use this as opposed to the ASCX token? -->
+            <p><b>Example:</b>
+                <xmp>
+    <div id="login_style" class="user">
+        <%@ Register TagPrefix="dnn" TagName="Login" Src="~/Admin/Skins/login.ascx" %>
+    </div>
+                </xmp>
+            </p>
+        </td>
+        </td>
+    </tr>
+    </table>
 
     <p>A default DNN installation includes the following theme objects:</p>
     <table width=100%>
@@ -88,6 +145,9 @@
     </tr>
     </table>
     <p><object width="100%" data="../../common/bptext/BP-TipSkinningTool.html"></object></p>
+    <p>
+        <!--#include file="../../common/bptext/BP-TipSkinningTool.html" -->
+    </p>
 </li>
 
 </ol>
